syntax = "proto3";
package tss.exported.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/tss/exported";

import "gogoproto/gogo.proto";

// KeyRequirement defines requirements for keys
message KeyRequirement {
  string chain_name = 1;
  KeyRole key_role = 2;
  int64 min_validator_subset_size = 3;
}

enum KeyRole {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  KEY_ROLE_UNSPECIFIED = 0 [ (gogoproto.enumvalue_customname) = "Unknown" ];
  KEY_ROLE_MASTER_KEY = 1 [ (gogoproto.enumvalue_customname) = "MasterKey" ];
  KEY_ROLE_SECONDARY_KEY = 2
      [ (gogoproto.enumvalue_customname) = "SecondaryKey" ];
}